description pane now handles RTF